Fix: double border getting applied in bottom of search panel

--- a/frontend/src/AppBuilder/CodeEditor/SearchBox.scss
+++ b/frontend/src/AppBuilder/CodeEditor/SearchBox.scss
@@ -56,3 +56,7 @@
 .code-hinter-wrapper .codehinter-search-btn {
     z-index: 1000;
 }
+
+.cm-panels {
+    border-bottom: none;
+}
